feat: Add Burningwave core to manipulate source files